CHANGELOG
=========

2012/09/19 - Franck Martin
  - Fix SMTP error codes and text
  - Disconnect after reject as likely a bad actor
  - Improve documentation

2012/08/20 - Franck Martin
  - reporting the correct subject for the aggregate reports
  - make aggregate reporting more resilient to bad email addresses
  - fixing a bug in finding via DNS if a domain accepts forensic reports
  - make a humanly parseable subject for forensic reports, deviates from RFC

2012/07/27 - Franck Martin
  - adding forensic reports capability
  - moving some dmarc options in the dmarc config section in dp_config.lua
  - various fixes related to handling sub domains
  - issue #1 fixed: ec_dkim_domains does not always report the domain in d=
  - dmarclogs now contain the message ID
  - DMARC aggregate report is now indicating the override reason correctly
  - better reject texts when the From: header is non conforming
  - scripts extensively tested during DMARC Interop

2012/07/05 - Franck Martin
  - adding DMARC aggregate report capability

2012/05/31 - Franck Martin
  - initial release